# sparser-cpp

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  LICENSE  vcpkg.json
.github/workflows/: cmake-single-platform.yml
include/: sparser.h
samples/: large_sample_compact.json
src/: CMakeLists.txt  main.cpp
src/sparser/: CMakeLists.txt  sparser.cpp
tests/: CMakeLists.txt  sparser_test.cpp
